Resolved issue where old background color appeared in Synopsis on mobile view

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -332,8 +332,9 @@ text-align: center;
         display:inline;
         position: inherit;
         height:12rem;
-        background-color:#a8eded;
+        background-color: inherit;
         margin:auto auto;
+        
     }
     .synopsis p{
         margin: 0.5rem;
@@ -379,6 +380,9 @@ text-align: center;
     #logo{
         float:left;
     }
+    .nav-color{
+        background-color: black;
+    }
     /* Refernce below code in readme*/
     .dropdown{
         float:left;
@@ -388,7 +392,7 @@ text-align: center;
         font-size: 16px;
         border:none;
         outline:none;
-        color:#1a2b6d;
+        color:white;
         padding: 1.8rem 2rem;
         background-color:inherit;
         font-family: inherit;
@@ -397,13 +401,16 @@ text-align: center;
     .drop-content{
         display: none;
         position: absolute;
-        background-color: #f9f9f9;
+        background-color: black;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1; 
     }
+    .drop-content ul {
+        list-style-type: none;
+    }
     .drop-content a{
         float: none;
-        color: #1a2b6d;
+        color: white;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
